# gdrive-uploader

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gdrive_uploader.py  pyproject.toml  run.sh
.github/workflows/: docker-build.yml
